--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/pin-input": "^2.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.4.3",
     "next": "15.1.7",
@@ -19,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
+    "server-only": "^0.0.1",
     "styled-components": "^6.1.15",
     "zod": "^3.24.2"
   },
